# meta-extractor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp
include/: cleaner.hpp  extractor.hpp  geo.hpp  utils.hpp
src/: cleaner.cpp  extractor.cpp  geo.cpp  utils.cpp
